@@ -19,6 +19,7 @@
     <string id="31008">Verwijder films</string>
     <string id="31009">Verwijder TV series</string>
     <string id="31010">Verwijder videoclips</string>
+    <string id="31011">Maak niet schoon als er video afgespeeld wordt</string>
     
     
     <!-- Criteria -->
@@ -57,4 +58,5 @@
     <string id="34011">De harde schijf heeft grootte 0. Heb je de juiste harde schijf geselecteerd in de instellingen?</string>
     <string id="34012">Fout bij openen van %s. Toegang geweigerd.</string>
     <string id="34013">Er is geen harde schijf geselecteerd om te controleren op vrije ruimte. Controleer de instellingen.</string>
+    <string id="34014">Er wordt momenteel een video afgespeeld. Er zal niet worden schoongemaakt gedurende dit interval.</string>
 </strings>
